--- a/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
@@ -71,6 +71,19 @@
         </igz-element-loading-status>
 
         <igz-element-loading-status class="common-table-cell element-loading-status-wrapper"
+                                    data-name="{{$ctrl.nuclioFunctionsGpu}}-{{$ctrl.function.metadata.name}}"
+                                    data-loading-status-size="small"
+                                    data-ng-class="[$ctrl.getFunctionsTableColSize('gpuCores')]">
+            <igz-size data-ng-if="!$ctrl.function.ui.error.kube_metrics_server_pods_gpu_utilization && !$ctrl.isFunctionCollapsed"
+                      data-type="functions_gpu"
+                      data-entity="$ctrl.function">
+            </igz-size>
+            <div data-ng-if="$ctrl.function.ui.error.kube_metrics_server_pods_gpu_utilization">
+                {{$ctrl.function.ui.error.kube_metrics_server_pods_gpu_utilization}}
+            </div>
+        </igz-element-loading-status>
+
+        <igz-element-loading-status class="common-table-cell element-loading-status-wrapper"
                                     data-name="nuclio_processor_handled_events_total-{{$ctrl.function.metadata.name}}"
                                     data-loading-status-size="small"
                                     data-ng-class="[$ctrl.getFunctionsTableColSize('metricsCount')]">
