--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -68,7 +68,7 @@
                                              data-items-type="{{$ctrl.isDemoMode() ? $ctrl.functionsService.checkedItem : 'functions'}}">
                     </igz-action-checkbox-all>
                 </div>
-                <div class="igz-col-3 common-table-cell"></div>
+                <div class="common-table-cell function-collapse-cell"></div>
                 <div class="igz-row common-table-cells-container">
                     <div class="common-table-cell sortable"
                          data-ng-class="[$ctrl.getColumnSortingClasses('metadata.name', $ctrl.sortedColumnName, $ctrl.isReverseSorting),
