--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -3,7 +3,9 @@
         <div class="title">{{ 'common:RESOURCES' | i18next }}</div>
         <div class="row">
             <div class="igz-row form-row" data-ng-if="$ctrl.selectedPodTolerationOption">
-                <div class="igz-col-40 row-title">{{ 'functions:RUN_ON_SPOT_NODES' | i18next }}</div>
+                <div class="igz-col-40 row-title">{{ 'functions:RUN_ON_SPOT_NODES' | i18next }}
+                    <igz-more-info data-description="{{$ctrl.selectedPodTolerationOption.tooltip}}"></igz-more-info>
+                </div>
 
                 <div class="igz-col-20 input-wrapper"></div>
 
