Impl [UI] - adding spill disk param to trino

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -44,7 +44,7 @@
                             <div class="template-description">{{value.rendered.spec.description}}</div>
                             <div data-ng-if="value.ui.readMore"
                                  class="template-read-more">
-                                {{ 'functions:READ_MORE' | i18next }}...
+                                {{ 'common:READ_MORE' | i18next }}...
                             </div>
                         </div>
 
