Impl [Nuclio] Function pod priority shows values when validFunctionPriorityClassNames is null

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -20,7 +20,7 @@
                     </div>
                 </div>
             </div>
-            <div class="igz-row form-row">
+            <div class="igz-row form-row" data-ng-if="$ctrl.isPodsPriorityShown()">
                 <div class="igz-col-40 row-title">{{ 'functions:PODS_PRIORITY' | i18next }}</div>
 
                 <div class="igz-col-20 input-wrapper"></div>
