Impl [UI] Ability for IT_admin to set labels on app nodes ( vanilla K8s)

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-configuration-labels">
     <div class="title">
-        <span>{{ 'functions:LABELS' | i18next }}</span>
+        <span>{{ 'common:LABELS' | i18next }}</span>
         <igz-more-info
                 data-description="{{$ctrl.tooltip}}"
                 data-trigger="click"
