Impl [Services] scalable mlrun-api

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -35,9 +35,9 @@
                                                     data-form-object="$ctrl.basicSettingsForm"
                                                     data-validation-is-required="true"
                                                     data-validation-rules="$ctrl.validationRules.integer"
-                                                    data-placeholder-text="{{ 'functions:MIN' | i18next }}...">
+                                                    data-placeholder-text="{{ 'common:MIN' | i18next }}...">
                         </igz-validating-input-field>
-                        <div class="values-label">{{ 'functions:MIN' | i18next }}</div>
+                        <div class="values-label">{{ 'common:MIN' | i18next }}</div>
                         <igz-validating-input-field data-field-type="input"
                                                     data-input-name="sec"
                                                     data-input-value="$ctrl.timeout.sec"
