--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -187,7 +187,7 @@
                 </div>
                 <div class="igz-col-40 input-wrapper">
                     <div class="input-title">
-                        {{ 'functions:MIN' | i18next }}
+                        {{ 'common:MIN' | i18next }}
                         <igz-more-info
                                 data-description="{{ 'functions:MIN_REPLICAS' | i18next:{default: $ctrl.defaultFunctionConfig.spec.minReplicas} }}"
                                 data-default-tooltip-placement="top"
