Fix [UI] services screen is broken

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-table.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-table.tpl.html
@@ -6,7 +6,8 @@
         <div class="igz-row form-row">
             <div class="table-body" data-ng-repeat="metric in $ctrl.scaleMetrics">
                 <ncl-auto-scale-metrics-input data-row-data="metric"
-                                              data-key-list="$ctrl.supportedAutoScaleMetrics"
+                                              data-presets-list="$ctrl.windowSizePresets"
+                                              data-type-list="$ctrl.supportedAutoScaleMetrics"
                                               data-item-index="$index"
                                               data-is-disabled="$ctrl.isFunctionDeploying()"
                                               data-action-handler-callback="$ctrl.handleScaleMetricsAction(actionType, index)"
