--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-input/auto-scale-metrics-input.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-input/auto-scale-metrics-input.tpl.html
@@ -11,12 +11,12 @@
                                       data-prevent-drop-up="true"
                                       data-is-required="true"
                                       data-placeholder="{{ 'functions:PLACEHOLDER.CHOOSE_METRIC' | i18next }}"
-                                      data-input-name="metricName"
-                                      data-selected-item="$ctrl.getSelectedItem('metricName')"
+                                      data-input-name="displayName"
+                                      data-selected-item="$ctrl.getSelectedItem('displayName')"
                                       data-is-disabled="$ctrl.isDisabled"
                                       data-values-array="$ctrl.typeList"
-                                      data-item-select-field="metricName"
-                                      data-name-key="metricName"
+                                      data-item-select-field="displayName"
+                                      data-name-key="displayName"
                                       data-item-select-callback="$ctrl.handleDropdownChange(item, field)">
                 </igz-default-dropdown>
             </div>
