--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -320,7 +320,7 @@
             </div>
         </div>
     </form>
-    <ncl-auto-scale-metrics-table data-is-function-deploying="$ctrl.isFunctionDeploying()"
+    <ncl-auto-scale-metrics-table data-is-disabled="$ctrl.areAutoScaleMetricsDisabled()"
                                   data-version="$ctrl.version">
     </ncl-auto-scale-metrics-table>
 </div>
