Impl [UI] Allow use ALL configmap configuration in the environment variable

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
@@ -42,7 +42,7 @@
              data-ng-class="{'disabled': $ctrl.isFunctionDeploying()}"
              data-ng-click="$ctrl.addNewAnnotation($event)">
             <span class="igz-icon-add-round"></span>
-            {{ 'functions:CREATE_NEW_ANNOTATION' | i18next }}
+            {{ 'functions:ADD_NEW_ANNOTATION' | i18next }}
         </div>
     </form>
 </div>
