--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -48,7 +48,7 @@
              data-tooltip-placement="right"
              data-tooltip-popup-delay="100">
             <span class="igz-icon-add-round"></span>
-            {{ 'functions:CREATE_NEW_LABEL' | i18next }}
+            {{ 'functions:ADD_NEW_LABEL' | i18next }}
         </div>
     </form>
 </div>
