--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -52,7 +52,7 @@
              data-ng-class="{'disabled': $ctrl.isFunctionDeploying()}"
              data-ng-click="$ctrl.createVolume($event)">
             <span class="igz-icon-add-round"></span>
-            {{ 'functions:CREATE_NEW_VOLUME' | i18next }}
+            {{ 'functions:ADD_NEW_VOLUME' | i18next }}
         </div>
     </form>
 </div>
