--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -45,7 +45,7 @@
                      data-ng-if="$ctrl.isCreateNewTriggerEnabled()"
                      data-ng-click="$ctrl.createTrigger($event)">
                     <span class="igz-icon-add-round"></span>
-                    {{ 'functions:CREATE_NEW_TRIGGER' | i18next }}
+                    {{ 'functions:ADD_NEW_TRIGGER' | i18next }}
                 </div>
             </div>
         </div>
