Fix [Services] CREATE_NEW_ENTRY is shown instead of "Create a new entry"

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -315,7 +315,7 @@
                      data-ng-class="{ 'disabled': $ctrl.isFunctionDeploying() }"
                      data-ng-click="$ctrl.addNewNodeSelector($event)">
                     <span class="igz-icon-add-round"></span>
-                    {{ 'common:ADD_NEW_ENTRY' | i18next }}
+                    {{ 'common:ADD_ENTRY' | i18next }}
                 </div>
             </div>
         </div>
