--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -26,7 +26,7 @@
              data-ng-class="{ 'disabled': $ctrl.isFunctionDeploying() }"
              data-ng-click="$ctrl.addNewVariable($event)">
             <span class="igz-icon-add-round"></span>
-            {{ 'functions:ADD_ENVIRONMENT_VARIABLE' | i18next }}
+            {{ 'common:ADD_ENVIRONMENT_VARIABLE' | i18next }}
         </div>
     </form>
 </div>
