--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -12,7 +12,7 @@
                    data-ng-disabled="$ctrl.isFunctionDeploying()"
                    >
             <label for="disable-default-http-trigger"
-                   class="checkbox-inline">{{ 'functions:DO_NOT_CREATE_HTTP_TRIGGER_BY_DEFAULT' | i18next }}</label>
+                   class="checkbox-inline">{{ 'common:DO_NOT_CREATE_HTTP_TRIGGER_BY_DEFAULT' | i18next }}</label>
             <igz-more-info
                     data-description="{{ 'functions:TOOLTIP.DO_NOT_CREATE_HTTP_TRIGGER_BY_DEFAULT' | i18next }}"
                     data-trigger="click"
