Fix [API gateway] possible to add invalid chars to "path"

--- a/src/nuclio/api-gateways/new-api-gateway-wizard/new-api-gateway-wizard.tpl.html
+++ b/src/nuclio/api-gateways/new-api-gateway-wizard/new-api-gateway-wizard.tpl.html
@@ -175,6 +175,7 @@
                                                                 data-input-value="$ctrl.apiGateway.spec.path"
                                                                 data-form-object="$ctrl.apiGatewayForm"
                                                                 data-validation-is-required="false"
+                                                                data-validation-rules="$ctrl.validationRules.path"
                                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                                 data-update-data-field="spec.path">
                                     </igz-validating-input-field>
